Initial drop of signing server framework

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,29 @@
 *.o
+*~
 src/client/sf_client
 src/client/sftp-test
+src/signframework/audit
+src/signframework/audit_archive
+src/signframework/framework
+src/signframework/framework_test
+src/signframework/frameworkkey_generate
+src/signframework/getpubkey
+src/signframework/getpubkeyecc
+src/signframework/json_regression_test/json_test
+src/signframework/keygen
+src/signframework/keygeneccp521
+src/signframework/password_change
+src/signframework/password_generate
+src/signframework/sender_validate
+src/signframework/setclock
+src/signframework/signecc/getkeysecc
+src/signframework/signecc/signecc
+src/signframework/*.bin
+src/signframework/*.tok
+src/signframework/*.pem
+src/signframework/*.txt
+src/signframework/*.cfg
+src/signframework/logs/*
+src/signframework/signecc/*.bin
+src/signframework/signecc/*.tok
+src/signframework/signecc/*.cfg
