Add support to sign sha256/rsa4096 Add support for RSA signatures over a SHA256 hash

--- a/src/signframework/makefile
+++ b/src/signframework/makefile
@@ -31,6 +31,7 @@ LNFLAGS =  -ggdb -lcrypto -lcsulcca -ljson-c
 
 all:    framework framework_test frameworkkey_generate keygen password_generate password_change \
 		keygeneccp521 audit sender_validate audit_archive getpubkey getpubkeyecc setclock
+	(cd sign_sha256 && make)
 	(cd sign_sha512 && make)
 	(cd signecc && make)
 	(cd sign_rsa_raw && make)
