Fixed licensing, printing statements and makefile
This commit is in response to a second round of comments in the PR. I have fixed the license from proprietary to Apache 2.0. Additionally, I have responded to comments regarding printing type size_t. I also removed some commented out code in the sign_cert makefile and added the sign_cert makefile to be called from the main makefile.

--- a/src/signframework/makefile
+++ b/src/signframework/makefile
@@ -35,6 +35,7 @@ all:    framework framework_test frameworkkey_generate keygen password_generate 
 	(cd sign_sha512 && make)
 	(cd signecc && make)
 	(cd sign_rsa_raw && make)
+	(cd sign_cert && make)
 #all:		ccatest  
 #		signature_verify \
 #		audit_archive t
