--- a/src/client-c++/.vscode/settings.json
+++ b/src/client-c++/.vscode/settings.json
@@ -6,5 +6,5 @@
         "files.associations": {
                 "*.cpp": "cpp",
         },
-        "C_Cpp.errorSquiggles": "Disabled"
+        "C_Cpp.autoAddFileAssociations": false,
 }
