--- a/src/client-c++/meson_options.txt
+++ b/src/client-c++/meson_options.txt
@@ -1,3 +1,4 @@
 
 option('lib-pkcs11', type : 'boolean', value : false)
 option('getopt_long', type : 'boolean', value : true)
+option('homebrew', type : 'boolean', value : false)
