Update build.meson to improve os compatibility
- Allows libcurl path to be manually specified
- Allow openssl 3.0 deprecated warnings to be suppressed
- Turn on debug messages for PKCS11 library

--- a/src/client-c++/meson.build
+++ b/src/client-c++/meson.build
@@ -16,28 +16,37 @@ endif
 
 cc = meson.get_compiler('cpp')
 
+if( get_option('ignore-deprecated') == true )
+  add_project_arguments('-Wno-deprecated-declarations', language: 'cpp')
+endif
+
+if( get_option('verbose') == true )
+  add_global_arguments('-DDEBUG', language: 'cpp')
+endif
+
 libcrypto_dep = dependency('libcrypto', required : false)
 if not libcrypto_dep.found()
-  libcrypto_dep = cc.find_library('crypto', required : false )
+  libcrypto_dep = cc.find_library('crypto', required : true )
 endif
 
 libssl_dep = dependency('libssl', required : false)
 if not libssl_dep.found()
-  libssl_dep = cc.find_library('ssl', required : false )
+  libssl_dep = cc.find_library('ssl', required : true )
 endif
 
-libjson_c_dep = dependency('json-c', required : false)
+libjson_c_dep = dependency('json-c', required : true)
 
-if get_option('homebrew') == true
-  # The curl library shipped in MacOS does not have sftp support.
-  # The homebrew package 'curl-openssl' contains the required library, but is not included in the
-  # default library path
-  libcurl_dep = cc.find_library('libcurl', dirs: '/usr/local/opt/curl/lib', required: true)
-  libssh_dep = cc.find_library('libssh2', dirs: '/usr/local/opt/libssh2/lib', required: true)
+if '' != get_option('libcurl')
+  # The curl library available from package managers may not have sftp support.
+  # Allow the developer to manually specify a library path.
+  # Some common paths:
+  # /usr/local/opt/libcurl/lib
+  # /usr/local/lib
+  libcurl_dep = cc.find_library('libcurl', dirs: get_option('libcurl'), required: true)
 else
   libcurl_dep = dependency('libcurl', required : false)
   if not libcurl_dep.found()
-    libcurl_dep = cc.find_library('curl', required : false )
+    libcurl_dep = cc.find_library('curl', required : true )
   endif
 endif
 
