Add -Dsecure-heap=true/false to disable OpenSSL secure heap usage on unsupported systems

--- a/src/client-c++/meson_options.txt
+++ b/src/client-c++/meson_options.txt
@@ -1,4 +1,5 @@
 
 option('lib-pkcs11', type : 'boolean', value : false)
 option('getopt_long', type : 'boolean', value : true)
+option('secure_heap', type : 'boolean', value : true)
 option('verbose', type : 'boolean', value: false)
